--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-pages": "^0.28.0",
